--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -4,12 +4,22 @@
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  padding-top: calc(100vh / 2.2);
-  margin-inline: auto;
 
   @include lg {
-    padding-top: calc(100vh / 4);
     flex-direction: column;
+    justify-content: flex-start;
+  }
+
+  &-background {
+    background: url("../../assets/home/background-home-desktop.jpg");
+
+    @include lg {
+      background: url("../../assets/home/background-home-tablet.jpg");
+    }
+
+    @include xs {
+      background: url("../../assets/home/background-home-mobile.jpg");
+    }
   }
 
   &-content {
@@ -33,11 +43,7 @@
   &-action {
     flex-basis: 50%;
     display: grid;
-    place-items: center right;
-
-    @include lg {
-      place-items: center;
-    }
+    place-items: center;
 
     &_btn {
       height: 274px;
@@ -59,18 +65,6 @@
       &:hover {
         animation: pulse 2s infinite;
       }
-    }
-  }
-
-  &-background {
-    @include page-background("../../assets/home/background-home-desktop.jpg");
-
-    @include lg {
-      background: url("../../assets/home/background-home-tablet.jpg");
-    }
-
-    @include xs {
-      background: url("../../assets/home/background-home-mobile.jpg");
     }
   }
 }
