--- a/src/assets/styles/_mixins.scss
+++ b/src/assets/styles/_mixins.scss
@@ -22,18 +22,3 @@
     @content;
   }
 }
-
-/* ========== BACKGROUND ========== */
-@mixin page-background($background-url) {
-  position: absolute;
-  top: 0;
-  bottom: 0;
-  z-index: -99;
-  min-height: 100vh;
-  height: 100%;
-  width: 100vw;
-  background: url("#{$background-url}");
-  background-repeat: no-repeat;
-  background-position: center center;
-  background-size: cover;
-}
